Lista 2 - Estruturas de Decisão

--- a/notebooks/Dev-Dojo-Lista-2.ipynb
+++ b/notebooks/Dev-Dojo-Lista-2.ipynb
@@ -582,8 +582,8 @@
    ],
    "source": [
     "def selecionado_operador():\n",
-    "    \"\"\" \n",
-    "    Solicita ao usuário um operador aritmético e valida a entrada. \n",
+    "    \"\"\"\n",
+    "    Solicita ao usuário um operador aritmético e valida a entrada.\n",
     "    \"\"\"\n",
     "    lista_operadores = [\"+\", \"-\", \"*\", \"/\"]\n",
     "    while True:\n",
@@ -598,22 +598,24 @@
     "\n",
     "\n",
     "def menu_calculadora():\n",
-    "    \"\"\" \n",
+    "    \"\"\"\n",
     "    Exibe o menu de operações disponíveis.\n",
     "    \"\"\"\n",
-    "    print(\"\"\"\n",
+    "    print(\n",
+    "        \"\"\"\n",
     "        Calculadora Simples com 2 números\\n \n",
     "        Operações \n",
     "        (+) - Soma \n",
     "        (-) - Subtração \n",
     "        (*) - Multiplicação \n",
     "        (/) - Divisão \n",
-    "        \"\"\")\n",
+    "        \"\"\"\n",
+    "    )\n",
     "\n",
     "\n",
     "def obtendo_numero_usuario(numero):\n",
-    "    \"\"\" \n",
-    "    Solicita ao usuário um número e valida a entrada. \n",
+    "    \"\"\"\n",
+    "    Solicita ao usuário um número e valida a entrada.\n",
     "    \"\"\"\n",
     "    while True:\n",
     "        try:\n",
@@ -695,12 +697,7 @@
     "    Returns:\n",
     "        str: Resultado da operação no formato de string.\n",
     "    \"\"\"\n",
-    "    operacoes ={\n",
-    "        \"+\": soma,\n",
-    "        \"-\": subtracao,\n",
-    "        \"*\": multiplicacao,\n",
-    "        \"/\": divisao\n",
-    "        }\n",
+    "    operacoes = {\"+\": soma, \"-\": subtracao, \"*\": multiplicacao, \"/\": divisao}\n",
     "    return operacoes[operador](numero1, numero2)\n",
     "\n",
     "\n",
@@ -717,10 +714,11 @@
     "        numero1, numero2 = [obtendo_numero_usuario(i + 1) for i in range(total_numeros)]\n",
     "        resultado = calcular(operador, numero1, numero2)\n",
     "        print(resultado)\n",
-    "        outra_operacao = input(\"Deseja realizar outra operação? (s/n): \").lower() \n",
-    "        if outra_operacao != 's': \n",
-    "            print(\"Obrigado por usar a calculadora! Até a próxima.\") \n",
+    "        outra_operacao = input(\"Deseja realizar outra operação? (s/n): \").lower()\n",
+    "        if outra_operacao != \"s\":\n",
+    "            print(\"Obrigado por usar a calculadora! Até a próxima.\")\n",
     "            break\n",
+    "\n",
     "\n",
     "calculadora()"
    ]
